<resources>
    <string name="sb_text_header_channel_list">Channels</string>
    <string name="sb_text_header_channel_settings">Channel information</string>
    <string name="sb_text_header_member_list">Members</string>
    <string name="sb_text_header_invite_member">Invite users</string>
    <string name="sb_text_header_create_channel">New channel</string>
    <string name="sb_text_header_set_operators">Set as operators</string>
    <string name="sb_text_header_participants">Participants</string>
    <string name="sb_text_header_participants_count">%s participants</string>
    <string name="sb_text_header_message_thread">Thread</string>
    <string name="sb_text_channel_list_title_no_members">(No members)</string>
    <string name="sb_text_channel_list_title_unknown">(No name)</string>
    <string name="sb_text_channel_list_unread_count_max">99+</string>
    <string name="sb_text_channel_list_last_message_file">%1$s sent a file.</string>
    <string name="sb_text_channel_list_last_message_file_unknown">Unknown</string>
    <string name="sb_text_channel_list_push_on">Turn on notifications</string>
    <string name="sb_text_channel_list_push_off">Turn off notifications</string>
    <string name="sb_text_channel_list_leave">Leave channel</string>
    <string name="sb_text_channel_list_empty">No channels</string>
    <string name="sb_text_channel_message_badge_edited">&#160;(edited)</string>
    <string name="sb_text_channel_tooltip">%d new message</string>
    <string name="sb_text_channel_tooltip_with_count">%d new messages</string>
    <string name="sb_text_channel_unread_count_tooltip">%s unread message</string>
    <string name="sb_text_channel_unread_count_tooltip_with_count">%s unread messages</string>
    <string name="sb_text_channel_anchor_copy">Copy</string>
    <string name="sb_text_channel_anchor_mark_as_unread">Mark as unread</string>
    <string name="sb_text_channel_anchor_save">Save</string>
    <string name="sb_text_channel_anchor_edit">Edit</string>
    <string name="sb_text_channel_anchor_delete">Delete</string>
    <string name="sb_text_channel_anchor_reply">Reply</string>
    <string name="sb_text_channel_anchor_reply_in_thread">Reply in thread</string>
    <string name="sb_text_channel_anchor_retry">Retry</string>
    <string name="sb_text_channel_input_text_hint">Enter message</string>
    <string name="sb_text_channel_input_reply_text_hint">Reply to message</string>
    <string name="sb_text_channel_input_reply_in_thread_hint">Reply in thread</string>
    <string name="sb_text_channel_input_reply_to_thread_hint">Reply to thread</string>
    <string name="sb_text_channel_input_camera">Take photo</string>
    <string name="sb_text_channel_input_take_video">Take video</string>
    <string name="sb_text_channel_input_gallery">Gallery</string>
    <string name="sb_text_channel_input_document">Document</string>
    <string name="sb_text_channel_typing_indicator_single">%s is typing&#8230;</string>
    <string name="sb_text_channel_typing_indicator_double">%s and %s are typing&#8230;</string>
    <string name="sb_text_channel_typing_indicator_multiple">Several people are typing&#8230;</string>
    <string name="sb_text_channel_unknown_type_text">(Unknown message type)\nCannot read this message.</string>
    <string name="sb_text_channel_reaction_count_max">99</string>
    <string name="sb_text_channel_message_empty">No messages</string>
    <string name="sb_text_channel_message_unavailable">Message unavailable</string>
    <string name="sb_text_channel_message_unread_count_max">99+</string>
    <string name="sb_text_notification_fallback_title">(Template error)</string>
    <string name="sb_text_notification_fallback_description">Can\'t read this notification.</string>
    <string name="sb_text_notification_channel_message_empty">No notifications</string>
    <string name="sb_text_notification_channel_list_error">Something went wrong.</string>
    <string name="sb_text_feedback_comment_title">Provide additional feedback (optional)</string>
    <string name="sb_text_feedback_comment_hint">Leave a comment</string>
    <string name="sb_text_feedback_edit_comment">Edit comment</string>
    <string name="sb_text_feedback_remove_comment">Remove feedback</string>
    <string name="sb_text_channel_settings_moderations">Moderations</string>
    <string name="sb_text_channel_settings_notification">Notifications</string>
    <string name="sb_text_channel_settings_members">Members</string>
    <string name="sb_text_channel_settings_leave_channel">Leave channel</string>
    <string name="sb_text_channel_settings_delete_channel">Delete channel</string>
    <string name="sb_text_channel_settings_change_channel_name">Change name</string>
    <string name="sb_text_channel_settings_change_channel_name_hint">Enter name</string>
    <string name="sb_text_channel_settings_change_channel_image">Change channel image</string>
    <string name="sb_text_channel_settings_change_channel_image_camera">Take photo</string>
    <string name="sb_text_channel_settings_change_channel_image_gallery">Choose photo</string>
    <string name="sb_text_channel_settings_message_search">Search in channel</string>
    <string name="sb_text_user_list_badge_me">&#160;(You)</string>
    <string name="sb_text_user_list_empty">No users</string>
    <string name="sb_text_participants_list_empty">No participants</string>
    <string name="sb_text_yesterday">Yesterday</string>
    <string name="sb_text_dialog_delete_file_message">Delete this file?</string>
    <string name="sb_text_dialog_delete_message">Delete this message?</string>
    <string name="sb_text_dialog_delete_multiple_files_message">Do you want to delete all %d photos?</string>
    <string name="sb_text_dialog_delete_channel">Delete channel?</string>
    <string name="sb_text_dialog_delete_channel_message">Once deleted, this channel can\'t be restored.</string>
    <string name="sb_text_toast_success_copy">Copied</string>
    <string name="sb_text_toast_success_start_upload_file">Uploading&#8230;</string>
    <string name="sb_text_toast_success_start_download_file">Downloading&#8230;</string>
    <string name="sb_text_toast_success_download_file">File saved</string>
    <string name="sb_text_toast_success_feedback_update">Changes saved.</string>
    <string name="sb_text_toast_failure_feedback_submit">Couldn\'t submit. Try again.</string>
    <string name="sb_text_toast_failure_feedback_update">Couldn\'t save. Try again.</string>
    <string name="sb_text_toast_failure_feedback_delete">Couldn\'t delete. Try again.</string>
    <string name="sb_text_button_edit">Edit</string>
    <string name="sb_text_button_invite">Invite</string>
    <string name="sb_text_button_cancel">Cancel</string>
    <string name="sb_text_button_create">Create</string>
    <string name="sb_text_button_save">Save</string>
    <string name="sb_text_button_delete">Delete</string>
    <string name="sb_text_button_retry">Retry</string>
    <string name="sb_text_button_selected">Selected</string>
    <string name="sb_text_button_add">Add</string>
    <string name="sb_text_button_ok">OK</string>
    <string name="sb_text_button_submit">Submit</string>
    <string name="sb_text_ellipsis">&#8230;</string>
    <string name="sb_text_original_message_deleted">The thread doesn\&#39;t exist because the parent message was deleted.</string>
    <string name="sb_text_error_retry_request">Check your connection and try again.</string>
    <string name="sb_text_error_get_channel_list">Couldn\&#39;t retrieve channel list.</string>
    <string name="sb_text_error_get_channel">Couldn\&#39;t retrieve channel.</string>
    <string name="sb_text_error_create_channel">Couldn\&#39;t create channel.</string>
    <string name="sb_text_error_update_channel">Couldn\&#39;t update channel.</string>
    <string name="sb_text_error_leave_channel">Couldn\&#39;t leave channel.</string>
    <string name="sb_text_error_delete_channel">Couldn\&#39;t delete channel.</string>
    <string name="sb_text_error_push_notification_on">Couldn\&#39;t turn on notifications.</string>
    <string name="sb_text_error_push_notification_off">Couldn\&#39;t turn off notifications.</string>
    <string name="sb_text_error_push_notification_setting">Couldn\&#39;t set the notification setting.</string>
    <string name="sb_text_error_invite_member">Couldn\&#39;t invite users.</string>
    <string name="sb_text_error_get_user_list">Couldn\&#39;t retrieve user list.</string>
    <string name="sb_text_error_add_reaction">Couldn\&#39;t add reaction.</string>
    <string name="sb_text_error_register_operator">Couldn\&#39;t register as operator.</string>
    <string name="sb_text_error_unregister_operator">Couldn\&#39;t unregister operator.</string>
    <string name="sb_text_error_delete_reaction">Couldn\&#39;t delete reaction.</string>
    <string name="sb_text_error_get_thread_list">Couldn\&#39;t retrieve thread list.</string>
    <string name="sb_text_error_resend_message">Couldn\&#39;t send message. Try again.</string>
    <string name="sb_text_error_update_user_message">Couldn\&#39;t edit message.</string>
    <string name="sb_text_error_delete_message">Couldn\&#39;t delete message.</string>
    <string name="sb_text_error_copy_message">Couldn\&#39;t copy message.</string>
    <string name="sb_text_error_send_message">Couldn\&#39;t send message. Try again.</string>
    <string name="sb_text_error_message_filtered">Message filtered.</string>
    <string name="sb_text_error_mute_member">Couldn\&#39;t mute member. Try again.</string>
    <string name="sb_text_error_mute_participant">Couldn\&#39;t mute participant. Try again.</string>
    <string name="sb_text_error_ban_member">Couldn\&#39;t ban member. Try again.</string>
    <string name="sb_text_error_ban_participant">Couldn\&#39;t ban participant. Try again.</string>
    <string name="sb_text_error_unmute_member">Couldn\&#39;t unmute member. Try again.</string>
    <string name="sb_text_error_unmute_participant">Couldn\&#39;t unmute participant. Try again.</string>
    <string name="sb_text_error_unban_member">Couldn\&#39;t unban member. Try again.</string>
    <string name="sb_text_error_unban_participant">Couldn\&#39;t unban participant. Try again.</string>
    <string name="sb_text_error_user_muted">You\&#39;re muted by the operator.</string>
    <string name="sb_text_error_channel_frozen">Channel is frozen</string>
    <string name="sb_text_error_open_camera">Couldn\&#39;t open camera.</string>
    <string name="sb_text_error_open_gallery">Couldn\&#39;t open photo library.</string>
    <string name="sb_text_error_open_file">Couldn\&#39;t open file.</string>
    <string name="sb_text_error_download_file">Couldn\&#39;t download file.</string>
    <string name="sb_text_error_multiple_files_count_limit">Up to %d files can be attached.</string>
    <string name="sb_text_error_file_upload_size_limit">The maximum size per file is %s.</string>
    <string name="sb_text_dialog_permission_title">Allow permission</string>
    <string name="sb_text_go_to_settings">Settings</string>
    <string name="sb_text_select_channel_type">Channel type</string>
    <string name="sb_text_group">Group</string>
    <string name="sb_text_super_group">Supergroup</string>
    <string name="sb_text_broadcast">Broadcast</string>
    <string name="sb_text_operator">Operator</string>
    <string name="sb_text_menu_operators">Operators</string>
    <string name="sb_text_menu_muted_members">Muted members</string>
    <string name="sb_text_menu_freeze_channel">Freeze channel</string>
    <string name="sb_text_push_setting_mentions_only">Mentions only</string>
    <string name="sb_text_push_setting_option_all">All new messages</string>
    <string name="sb_text_push_setting_description">Turn on to receive notifications when messages are delivered to this channel.</string>
</resources>