<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scroll_layout"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/operators"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_56"
            android:gravity="center_vertical"
            android:text="@string/sb_text_menu_operators"
            android:textAppearance="@style/SendbirdBody1OnLight01"
            android:paddingLeft="@dimen/sb_size_16"
            android:paddingRight="@dimen/sb_size_16"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_1"
            android:background="@color/onlight_04"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/muted"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_56"
            android:gravity="center_vertical"
            android:text="@string/sb_text_menu_muted_members"
            android:textAppearance="@style/SendbirdBody1OnLight01"
            android:paddingLeft="@dimen/sb_size_16"
            android:paddingRight="@dimen/sb_size_16"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_1"
            android:background="@color/onlight_04"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/banned"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_56"
            android:gravity="center_vertical"
            android:text="@string/sb_text_menu_banned_members"
            android:textAppearance="@style/SendbirdBody1OnLight01"
            android:paddingLeft="@dimen/sb_size_16"
            android:paddingRight="@dimen/sb_size_16"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_1"
            android:background="@color/onlight_04"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_56">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/freeze"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/sb_text_menu_freeze_channel"
                android:textAppearance="@style/SendbirdBody1OnLight01"
                android:paddingLeft="@dimen/sb_size_16"
                android:paddingRight="@dimen/sb_size_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/freezeSwitch"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/freezeSwitch"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/sb_size_16"
                app:layout_constraintLeft_toRightOf="@id/freeze"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_1"
            android:background="@color/onlight_04"/>

    </LinearLayout>

</ScrollView>