<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/messageInputParent"
        android:orientation="vertical"
        android:paddingTop="@dimen/sb_size_10"
        android:paddingBottom="@dimen/sb_size_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inputPanel"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/sb_size_8"
            android:paddingRight="@dimen/sb_size_16"
            android:paddingStart="@dimen/sb_size_8"
            android:paddingEnd="@dimen/sb_size_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ibtnAdd"
                android:layout_width="@dimen/sb_size_40"
                android:layout_height="@dimen/sb_size_40"
                android:src="@drawable/icon_add"
                android:padding="@dimen/sb_size_8"
                android:layout_marginRight="@dimen/sb_size_4"
                android:layout_marginLeft="@dimen/sb_size_0"
                android:layout_marginEnd="@dimen/sb_size_4"
                android:layout_marginStart="@dimen/sb_size_0"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/etInputText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etInputText"
                android:layout_width="@dimen/sb_size_0"
                android:layout_height="wrap_content"
                android:hint="@string/sb_text_channel_input_text_hint"
                android:maxLines="3"
                android:paddingLeft="@dimen/sb_size_20"
                android:paddingRight="@dimen/sb_size_20"
                android:imeOptions="flagNoExtractUi"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ibtnSend"
                app:layout_constraintStart_toEndOf="@id/ibtnAdd"
                app:layout_constraintTop_toTopOf="parent">

                <requestFocus />
            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ibtnSend"
                android:src="@drawable/icon_send"
                android:layout_width="@dimen/sb_size_24"
                android:layout_height="@dimen/sb_size_24"
                android:layout_marginRight="@dimen/sb_size_0"
                android:layout_marginLeft="@dimen/sb_size_12"
                android:layout_marginEnd="@dimen/sb_size_0"
                android:layout_marginStart="@dimen/sb_size_12"
                android:visibility="gone"
                android:padding="@dimen/sb_size_0"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toEndOf="@id/etInputText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/editPanel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_56"
            android:paddingLeft="@dimen/sb_size_16"
            android:paddingRight="@dimen/sb_size_16"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_gravity="start|center_vertical"
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/sb_size_40"
                android:paddingRight="@dimen/sb_size_4"
                android:paddingLeft="@dimen/sb_size_4"
                android:text="@string/sb_text_button_cancel"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_gravity="end|center_vertical"
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/sb_size_40"
                android:paddingRight="@dimen/sb_size_4"
                android:paddingLeft="@dimen/sb_size_4"
                android:text="@string/sb_text_button_save"/>

        </FrameLayout>

    </LinearLayout>
</layout>